--- a/HelloWorld/index.html
+++ b/HelloWorld/index.html
@@ -14,6 +14,21 @@
 			var app = new sap.m.App("myApp", {
 				initialPage:"page1"
 			});
+			
+			//Create First Page
+			var page1 = new sap.m.Page("page1", {
+				title :"Hello World",
+				showNavButton : false,
+				content : new sap.m.Button({
+					text : "Goto Page2"
+					press : function(){
+						app.to("Page2");
+					}
+				}
+				
+					
+				})
+			});
 		});
 		
 	</script>
