Working: Implemented CSS File Change: Index.html, App.view.xml

--- a/HelloWorld/index.html
+++ b/HelloWorld/index.html
@@ -19,7 +19,7 @@
 			
 			//Create First Page
 			var page1 = new sap.m.Page("page1", {
-				title :"Hello World",
+				title :"Hellos World",
 				showNavButton : false,
 				content : new sap.m.Button({
 					text : "Goto to Page2"
