Working: Implemented CSS File Change: Index, App.view

--- a/HelloWorldv2/webapp/index.html
+++ b/HelloWorldv2/webapp/index.html
@@ -20,7 +20,7 @@
              //	text : "Hello World via sap.m.Text"
              //xmlview is now commented since Component.js will be initialised first
              //sap.ui.xmlview({
-             //viewName : "sandesh.view.App"	
+             //viewName : "sandesh.view.App".	
              new sap.m.Shell({
                   app: new sap.ui.core.ComponentContainer({
 		          name: "sandesh",
